// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`déroule une partie complète 1`] = `
Object {
  "chiffreCourant": 15,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 20,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 40,
      "touches": Object {},
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 2`] = `
Object {
  "chiffreCourant": 16,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 20,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 70,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 3`] = `
Object {
  "chiffreCourant": 16,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 36,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 70,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 4`] = `
Object {
  "chiffreCourant": "D",
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 36,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 134,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 5`] = `
Object {
  "chiffreCourant": "D",
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 76,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 134,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 6`] = `
Object {
  "chiffreCourant": 17,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 76,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 67,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "DOUBLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 7`] = `
Object {
  "chiffreCourant": 17,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 38,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 67,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "DOUBLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 8`] = `
Object {
  "chiffreCourant": 18,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 38,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 101,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "DOUBLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 9`] = `
Object {
  "chiffreCourant": 18,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 92,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 3,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 101,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "DOUBLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 10`] = `
Object {
  "chiffreCourant": "T",
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 92,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 3,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 119,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 11`] = `
Object {
  "chiffreCourant": "T",
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 152,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 3,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
        "TRIPLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 3,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 119,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 12`] = `
Object {
  "chiffreCourant": 19,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 152,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 3,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
        "TRIPLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 3,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 60,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [],
        "TRIPLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 13`] = `
Object {
  "chiffreCourant": 19,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 76,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 3,
          },
        ],
        "19": Array [
          Object {
            "chiffre": 19,
            "nombre": 0,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
        "TRIPLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 3,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 60,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [],
        "TRIPLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 14`] = `
Object {
  "chiffreCourant": 20,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 76,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 3,
          },
        ],
        "19": Array [
          Object {
            "chiffre": 19,
            "nombre": 0,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
        "TRIPLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 3,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 98,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 1,
          },
        ],
        "19": Array [
          Object {
            "chiffre": 19,
            "nombre": 2,
          },
        ],
        "DOUBLE": Array [],
        "TRIPLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 15`] = `
Object {
  "chiffreCourant": 20,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 116,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 3,
          },
        ],
        "19": Array [
          Object {
            "chiffre": 19,
            "nombre": 0,
          },
        ],
        "20": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
        "TRIPLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 3,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 98,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 1,
          },
        ],
        "19": Array [
          Object {
            "chiffre": 19,
            "nombre": 2,
          },
        ],
        "DOUBLE": Array [],
        "TRIPLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 16`] = `
Object {
  "chiffreCourant": "B",
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 116,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 0,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 3,
          },
        ],
        "19": Array [
          Object {
            "chiffre": 19,
            "nombre": 0,
          },
        ],
        "20": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
        "TRIPLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 3,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 118,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "17": Array [
          Object {
            "chiffre": 17,
            "nombre": 2,
          },
        ],
        "18": Array [
          Object {
            "chiffre": 18,
            "nombre": 1,
          },
        ],
        "19": Array [
          Object {
            "chiffre": 19,
            "nombre": 2,
          },
        ],
        "20": Array [
          Object {
            "chiffre": 20,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [],
        "TRIPLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;
